Updated dockerfile